# vim-win32-build-update

./: .flake8  .gitignore  LICENSE  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
vimbuild/: __init__.py  __main__.py  github.py  main.py
