[metadata]
name = vimbuild
author = Laurent Boulard
author_email = laurent.boulard@gmail.com
description = Display information on latest tag from official Vim project on GitHub
version = attr: vimbuild.__version__
url = https://github.com/lboulard/vim-win32-build
keywords =
  tool
  vim
  helper
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_files =
  LICENSE

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
  feedparser

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
  vimbuild = vimbuild:cli